[tool.poetry]
name = "docs"
version = "0.0.0"
description = "Janssen Documentation project"
authors = [ "moabu <47318409+moabu@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6.0"
mkdocs-material = "^9.6.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-git-committers-plugin-2 = "^2.3.0"
mkdocs-include-markdown-plugin = "^6.0.0"
mkdocs-macros-plugin = "^1.0.0"
mkdocs-awesome-pages-plugin = "^2.9.0"
mkdocs-minify-plugin = "^0.8.0"
mkdocstrings = "^0.25.0"
mkdocstrings-python = "^1.10.0"
mdx-truly-sane-lists = "^1.3"
mike = "^2.1.0"
pymdown-extensions = "^10.7"
python-dateutil = "^2.9.0"
requests = "^2.32.0"
pyyaml = "^6.0.0"
click = "^8.1.0"
jinja2 = "^3.1.0"
markdown = "^3.6"
pygments = "^2.18.0"
watchdog = "^5.0.0"
babel = "^2.16.0"
gitpython = "^3.1.0"
beautifulsoup4 = "^4.12.0"
lxml = "^6.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"