[tool.poetry]
name = "docs"
version = "0.0.0"
description = "Janssen Documentation project"
authors = [ "moabu <47318409+moabu@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6.0"
mkdocs-material = "^9.7.0"
mkdocs-git-revision-date-localized-plugin = "^1.5.0"
mkdocs-git-committers-plugin-2 = "^2.3.0"
mkdocs-include-markdown-plugin = "^7.2.0"
mkdocs-macros-plugin = "^1.5.0"
mkdocs-awesome-pages-plugin = "^2.9.0"
mkdocs-minify-plugin = "^0.8.0"
mkdocstrings = "^1.0.0"
mkdocstrings-python = "^2.0.0"
mdx-truly-sane-lists = "^1.3"
mike = "^2.1.0"
pymdown-extensions = "^10.21.0"
python-dateutil = "^2.9.0"
requests = "^2.32.5"
pyyaml = "^6.0.3"
click = "^8.3.0"
jinja2 = "^3.1.6"

markdown = "^3.10.0"
pygments = "^2.19.0"
watchdog = "^5.0.0"
babel = "^2.16.0"
gitpython = "^3.1.46"
beautifulsoup4 = "^4.14.0"
lxml = "^6.0.0"
certifi = "^2026.1.4"
urllib3 = "^2.6.0"
jaraco-context = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
