[workspace]
resolver = "2"
members = ["bindings/*", "cedarling", "http_utils", "sparkv", "test_utils"]
exclude = ["bindings/cedarling-java"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sparkv = { path = "sparkv" }
jsonwebtoken = "9.3.0"
jsonwebkey = "0.3.5"
chrono = "0.4"
http_utils = { path = "http_utils" }
cedarling = { path = "cedarling" }
test_utils = { path = "test_utils" }
wasm-bindgen = "0.2.103"
wasm-bindgen-futures = "0.4.53"
web-sys = "0.3"
serde-wasm-bindgen = "0.6"
tokio = "1.42.0"
tokio-util = "0.7.15"


[profile.release]
debug-assertions = false
opt-level = "z"
codegen-units = 1
overflow-checks = false
