[workspace]
resolver = "2"
members = ["bindings/*", "cedarling", "http_utils", "sparkv", "test_utils"]
exclude = ["bindings/cedarling-java", "custom-lints"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
sparkv = { path = "sparkv" }
jsonwebtoken = { version = "10.3.0", features = [
    "rust_crypto",
    "use_pem",
], default-features = false }
jsonwebkey = "0.4.0"
chrono = "0.4"
reqwest = { version = "0.13.2", features = ["json", "form"] }
http_utils = { path = "http_utils" }
cedarling = { path = "cedarling" }
test_utils = { path = "test_utils" }
wasm-bindgen = "0.2.103"
wasm-bindgen-futures = "0.4.53"
web-sys = "0.3"
serde-wasm-bindgen = "0.6"
tokio = "1.42.0"
tokio-util = "0.7.15"
mockito = "1.5.0"

[workspace.lints.clippy]
pedantic = "warn"


[profile.release]
debug-assertions = false
opt-level = "z"
codegen-units = 1
overflow-checks = false
