[workspace]
resolver = "2"
members = [
    "bindings/*",
    "cedarling",
    "cedarling_pg",
    "cedarling_pg_codegen",
    "http_utils",
    "test_utils",
]
# cedarling_pg requires `cargo pgrx init` (a managed Postgres install) before its
# pgrx-pg-sys build script will succeed. Excluding it from default-members keeps
# `cargo build/test/bench/dylint` at the workspace root working without that setup.
# It's still a workspace member, so `cargo build -p cedarling_pg` and the dedicated
# postgres_extension_tests CI job still target it explicitly.
default-members = [
    "bindings/*",
    "cedarling",
    "cedarling_pg_codegen",
    "http_utils",
    "test_utils",
]
exclude = ["bindings/cedarling-java", "custom-lints"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
derive_more = "2.1.1"
jsonwebtoken = { version = "10.3.0", features = [
    "rust_crypto",
    "use_pem",
], default-features = false }
jsonwebkey = "0.4.0"
chrono = "0.4"
reqwest = { version = "0.13.2", features = ["json", "form"] }
http_utils = { path = "http_utils", version = "0.1.0" }
cedarling = { path = "cedarling" }
test_utils = { path = "test_utils" }
wasm-bindgen = "0.2.103"
wasm-bindgen-futures = "0.4.53"
web-sys = "0.3"
serde-wasm-bindgen = "0.6"
tokio = "1.42.0"
tokio-util = "0.7.15"
mockito = "1.5.0"
sha2 = "0.10"

[workspace.lints.clippy]
pedantic = "warn"
# duration_suboptimal_units suggests from_hours/from_mins which are unstable on stable Rust
duration-suboptimal-units = { level = "allow", priority = 1 }


# Native release builds (java/python/go/uniffi) are speed-oriented.
# The WASM target is size-oriented instead: it overrides these keys via the
# config-based profile in bindings/cedarling_wasm/.cargo/config.toml, which Cargo
# only picks up when building from that directory (i.e. under wasm-pack). Native
# builds run from this workspace root and never see it.
[profile.release]
debug-assertions = false
overflow-checks = false
