[tool.poetry]
name = "docs"
version = "2.0.0"
description = "Janssen Documentation project"
authors = [ "moabu <47318409+moabu@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "1.6.1"
mkdocs-exclude = "1.0.2"
mkdocs-material = "8.5.7"
mkdocs-material-extensions = "1.1"
mdx-truly-sane-lists = "1.3"
mike = "1.1.2"
mkdocs-git-revision-date-localized-plugin = "1.2.9"
mkdocs-git-committers-plugin-2 = "1.1.1"
mkdocs-exclude-search = "0.6.6"
mkdocs-include-markdown-plugin = "6.0.5"
# transitive dependencies
click = "8.1.3"
ghp-import = "2.1.0"
importlib-metadata = "4.12.0"
Jinja2 = "3.1.5"
Markdown = "3.6"
MarkupSafe = "2.1.1"
mergedeep = "1.3.4"
packaging = "21.3"
Pygments = "2.15.1"
pymdown-extensions = "10.0"
pyparsing = "3.0.9"
python-dateutil = "2.8.2"
PyYAML = ">6.0"
pyyaml_env_tag = "0.1"
six = "1.16.0"
verspec = "0.1.0"
watchdog = "2.1.9"
zipp = "3.19.1"
babel = "2.10.3"
GitPython = "3.1.41"
requests = "2.32.2"
pytz = "2022.2.1"
gitdb = "4.0.9"
idna = "3.7"
certifi = "2024.07.04"
charset-normalizer = "2.1.1"
urllib3 = "1.26.19"
beautifulsoup4 = "4.11.1"
soupsieve = "2.3.2.post1"
smmap = "5.0.0"
lxml = "5.3.1"
setuptools = "70.0.0"
bracex = "2.4"
wcmatch = "8.5.2"
mkdocstrings-python = "^1.16.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
