[package]
name = "cedarling"
version = "0.0.0"
edition = "2024"
description = "The Cedarling: a high-performance local authorization service powered by the Rust Cedar Engine."
license = "Apache-2.0"

[features]
# blocking feature allows to use blocking cedarling client
blocking = ["tokio/rt-multi-thread"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
serde_yml = "0.0.12"
thiserror = { workspace = true }
sparkv = { workspace = true }
uuid7 = { version = "1.6.0", features = [
    "serde",
    "uuid",
    "rand010",
], default-features = false }
cedar-policy = { version = "4.9.0", features = ["partial-eval"] }
cedar-policy-core = "4.9.0"
base64 = "0.22.1"
url = "2.5.2"
http_utils = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
typed-builder = "0.23.2"
semver = { version = "1.0.23", features = ["serde"] }
derive_more = { version = "2.1.1", features = [
    "deref",
    "from",
    "display",
    "error",
] }
time = { version = "0.3.36", features = ["wasm-bindgen"] }
regex = "1.11.1"
chrono = { workspace = true }
tokio = { workspace = true, features = ["macros", "time"] }
tokio-util = { workspace = true }
rand = "0.10.0"
smol_str = "0.3.2"
strum = { version = "0.28.0", features = ["derive"] }
datalogic-rs = "2.1.2"
flate2 = "1.1.1"
async-trait = "0.1.88"
futures = "0.3.31"
wasm-bindgen-futures = { workspace = true }
config = "0.15.11"
ahash = { version = "0.8.12", default-features = false, features = ["no-rng"] }
vfs = "0.12"
hex = "0.4.3"
sha2 = "0.10.8"
zip = "7.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = ["console"] }
# override getrandom to use `wasm_js` feature
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = [
    "wasm_js",
] }
getrandom_04 = { package = "getrandom", version = "0.4", features = [
    "wasm_js",
] }


[dev-dependencies]
# is used in testing
test_utils = { workspace = true }
jsonwebkey = { workspace = true, features = ["generate", "jwt-convert"] }
mockito = { workspace = true }
criterion = { version = "0.5.1", features = ["async_tokio"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
stats_alloc = "0.1.10"
tempfile = "3.8"

[target.'cfg(not(any(target_arch = "wasm32", target_os = "windows")))'.dev-dependencies]
pprof = { version = "0.14.0", features = ["flamegraph"] }

[lints]
workspace = true

[[bench]]
name = "authz_authorize_benchmark"
harness = false

[[bench]]
name = "startup_benchmark"
harness = false

[[bench]]
name = "authz_authorize_multi_issuer_benchmark"
harness = false

[[bench]]
name = "policy_store_benchmark"
harness = false
