[package]
name = "cedarling_pg"
version = "0.0.0"
edition = "2021"
description = "PostgreSQL extension integrating Cedarling authorization (pgrx)."
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg16"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
pg_test = []
pg_bench = ["dep:pgrx-bench"]

[dependencies]
cedarling = { path = "../cedarling", default-features = false, features = [
    "blocking",
] }
pgrx = "=0.18.0"

[dependencies.pgrx-bench]
version = "=0.18.0"
optional = true

[dev-dependencies]
[dev-dependencies.pgrx-tests]
version = "=0.18.0"

[lints]
workspace = true
