[tool.poetry]
name = "flask-sidecar"
version = "0.0.0"
description = "Sidecar for cedarling"
authors = ["SafinWasi <6601566+SafinWasi@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
flask-smorest = "^0.45.0"
pyyaml = "^6.0.2"
maturin = "^1.7.4"
flask-cors = "^5.0.0"
python-dotenv = "^1.0.1"
structlog = "^24.4.0"
python-json-logger = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
