[project]
name = "flask-sidecar"
version = "0.0.0"
description = "Sidecar for cedarling"
authors = [{ name = "SafinWasi", email = "6601566+SafinWasi@users.noreply.github.com" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "flask>=3.1.3,<4",
    "jinja2>=3.1.6,<4",
    "flask-smorest>=0.45.0,<0.46",
    "pyyaml>=6.0.2,<7",
    "flask-cors>=6.0.0,<7",
    "python-dotenv>=1.0.1,<2",
    "structlog>=24.4.0,<25",
    "python-json-logger>=2.0.7,<3",
    "gunicorn>=22.0.0,<23",
    "orjson>=3.11.5,<4",
]

[dependency-groups]
test = [
    "pytest>=9.0.3,<10",
    "pytest-cov>=6.0.0,<7",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["main"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
