[package]
name = "http_utils"
version = "0.1.0"
edition = "2021"
description = "HTTP utils that Cedarling uses internally"
license = "Apache-2.0"

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
