[package]
name = "sigstore-verifier"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
publish = false
description = "Pure Rust, WASM-compatible Sigstore/Cosign blob verification library"
keywords = ["sigstore", "cosign", "verification", "wasm"]
categories = ["cryptography", "wasm"]

[dependencies]
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

p256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
ecdsa = { version = "0.16", default-features = false, features = ["der", "verifying"] }
x509-parser = { version = "0.18", default-features = false }
serde_json_canonicalizer = "0.3"
der = { version = "0.8", default-features = false, features = ["oid"] }
regex-lite = { version = "0.1" }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

[dev-dependencies]
rcgen = { version = "0.14", default-features = false, features = ["pem", "ring", "x509-parser"] }

[build-dependencies]
x509-parser = { version = "0.18", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
chrono = { workspace = true }

[lints]
workspace = true
