[package]
name = "test_utils"
version = "0.0.0-nightly"
edition = "2021"

[dependencies]
pretty_assertions = "1"
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
jsonwebkey = { workspace = true, features = ["generate", "jwt-convert"] }
serde = { workspace = true }
josekit = "0.10.1"
