[workspace]
resolver = "2"
members = ["authz", "authz_run", "jwt"]

[workspace.dependencies]
authz = { path = "authz" }
jwt = { path = "jwt" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.63"
base64 = "0.22.1"
log = "0.4.22"

[profile.release]
strip = "symbols"
debug-assertions = true
lto = "thin"
opt-level = "s"
codegen-units = 1
