[workspace]
resolver = "2"
members = [
    "authz_engine",
    "authz_run",
    "cedarling_python",
    "engines/init_engine",
    "jwt_engine",
]

[workspace.dependencies]
authz_engine = { path = "authz_engine" }
jwt_engine = { path = "jwt_engine" }
init_engine = { path = "engines/init_engine" }
cedar-policy = "3.2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.63"
base64 = "0.22.1"
log = "0.4.22"
ehttp = { version = "0.5.0" }

[profile.release]
strip = "symbols"
debug-assertions = true
lto = "thin"
opt-level = "s"
codegen-units = 1
