[workspace]
resolver = "2"
members = [
    "engines/authz_engine",
    "authz_run",
    "engines/init_engine",
    "engines/jwt_engine",
    "bindings/cedarling_python",
    "cedarling",
]

[workspace.dependencies]
cedarling = { path = "cedarling" }
authz_engine = { path = "engines/authz_engine" }
jwt_engine = { path = "engines/jwt_engine" }
init_engine = { path = "engines/init_engine" }
cedar-policy = "3.2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.63"
base64 = "0.22.1"
log = "0.4.22"
ehttp = { version = "0.5.0" }

[profile.release]
strip = "symbols"
debug-assertions = true
lto = "thin"
opt-level = "s"
codegen-units = 1
