[package]
name = "cedarling_c"
version = "0.1.0"
edition = "2021"


[lib]
name = "cedarling_c"
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc = "0.2.174"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
cedarling={path = "../../cedarling"}


[build-dependencies]
cbindgen="0.29.0"



[features]
default = []
static=[]