[package]
name = "ext_php_rs_test"
version = "1.1.6"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
ext-php-rs = "*"
serde = "*"
serde_json = "*"
thiserror = "*"
sparkv = "*"
uuid7 = { version = "1.1.0", features = ["serde", "uuid"] }
cedar-policy = "4.0.0"
base64 = "0.22.1"
url = "2.5.2"
lazy_static = "1.5.0"
cedarling = { path = "../../cedarling" } # from a path in the local filesystem


[profile.release]
strip = "debuginfo"

