[package]
name = "cedarling_native_apps"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib", "staticlib"]
name = "mobile"
 
[dependencies]
cedarling = { workspace = true }
jsonwebtoken = "9.3.0"
openssl = { version = "0.10.35", features = ["vendored"] }
tokio = { version = "1.42.0", features = ["macros", "full"] }
once_cell = "1.20.2"

uniffi = { version = "0.28.3", features = [ "cli" ] }
uniffi_macros = "0.28.3"  # Procedural macros support
serde = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true

