[package]
name = "cedarling_python"
version = "1.16.0"
edition = "2021"
description = "Python binding to Cedarling"
license = "Apache-2.0"

[lib]
name = "cedarling_python"
crate-type = ["cdylib"]

# dependency for NOT wasm target
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
cedarling = { workspace = true, features = ["blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde-pyobject = "0.8.0"
