[package]
name = "cedarling_uniffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "mobile"

# dependency for NOT wasm target
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cedarling = { workspace = true, features = ["blocking"] }
jsonwebtoken = "9.3.0"
# Maybe we can remove this dependency?
openssl = { version = "0.10.71", features = ["vendored"] }
uniffi = { version = "0.29.0", features = ["cli"] }
uniffi_macros = "0.29.0"                                   # Procedural macros support
serde = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
# is used in testing
test_utils = { workspace = true }
