[package]
name = "cedarling_uniffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "cedarling_uniffi"

# dependency for NOT wasm target
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cedarling = { workspace = true, features = ["blocking"] }
uniffi = { version = "0.29.0", features = ["cli"] }
uniffi_macros = "0.29.0"                                   # Procedural macros support
serde_json = { workspace = true }
thiserror.workspace = true

[package.metadata.cargo-machete]
ignored = ["uniffi_macros"]
