[package]
name = "cedarling_uniffi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]
name = "cedarling_uniffi"

# dependency for NOT wasm target
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cedarling = { workspace = true, features = ["blocking"] }
uniffi = { version = "0.29.0", features = ["cli"] }
uniffi_macros = "0.29.0"                                   # Procedural macros support
serde_json = { workspace = true }
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
test_utils = { workspace = true }

# On Android, rustls-platform-verifier must be initialized with an Android
# Context via JNI before Cedarling makes any TLS connection (JWKS fetch, status
# lists, remote policy store). See src/android.rs.
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22"
rustls-platform-verifier = "0.7"

[package.metadata.cargo-machete]
ignored = ["uniffi_macros"]
