[package]
name = "cedarling_wasm"
version = "0.0.0"
edition = "2021"
description = "The Cedarling is a performant local authorization service that runs the Rust Cedar Engine"
license = "Apache-2.0"
repository = "https://github.com/JanssenProject/jans/tree/main/jans-cedarling"

[lib]
crate-type = ["cdylib"] # Required for WASM output

[dependencies]
# Common dependency for WASM interop
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
cedarling = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen-test = "0.3.49"

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4', '--enable-reference-types', '--enable-gc']

[dev-dependencies]
# is used in testing
test_utils = { workspace = true }
